<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/Reglage_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <Button
        android:id="@+id/button7"
        android:layout_width="282dp"
        android:layout_height="47dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="100dp"
        android:text="@string/button_FAQ"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="282dp"
        android:layout_height="47dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="100dp"
        android:text="@string/button_suggestions"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="282dp"
        android:layout_height="47dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="100dp"
        android:text="@string/button_enseignes"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="282dp"
        android:layout_height="47dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="100dp"
        android:text="@string/button_langues"
        android:textSize="18sp" />

    </FrameLayout>



</RelativeLayout>